<resources>
    <string name="app_name">NEET Study Planner</string>
    <string name="menu_home">Home</string>
    <string name="menu_schedule">Schedule</string>
    <string name="menu_progress">Progress</string>
    <string name="menu_settings">Settings</string>
    <string name="btn_add_session">Add Study Session</string>
    <string name="btn_start">Start</string>
    <string name="btn_pause">Pause</string>
    <string name="btn_resume">Resume</string>
    <string name="btn_stop">Stop</string>
    <string name="btn_save">Save</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_delete">Delete</string>
    <string name="subject_physics">Physics</string>
    <string name="subject_chemistry">Chemistry</string>
    <string name="subject_biology">Biology</string>
    <string name="label_subject">Subject</string>
    <string name="label_topic">Topic</string>
    <string name="label_duration">Duration (minutes)</string>
    <string name="label_date">Date</string>
    <string name="label_time">Time</string>
    <string name="label_notes">Notes</string>
    <string name="label_status">Status</string>
    <string name="status_pending">Pending</string>
    <string name="status_in_progress">In Progress</string>
    <string name="status_completed">Completed</string>
    <string name="error_empty_field">Please fill all fields</string>
    <string name="error_invalid_duration">Duration must be greater than 0</string>
    <string name="success_session_added">Study session added successfully</string>
    <string name="success_session_deleted">Study session deleted</string>
    <string name="title_add_session">Add New Study Session</string>
    <string name="title_edit_session">Edit Study Session</string>
    <string name="title_session_detail">Session Details</string>
    <string name="total_hours_studied">Total Hours Studied</string>
    <string name="weekly_progress">Weekly Progress</string>
    <string name="subjects_breakdown">Subject Breakdown</string>
</resources>