<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/card_margin">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAll"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="All"
            android:layout_margin="4dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnPhysics"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/subject_physics"
            android:layout_margin="4dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnChemistry"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/subject_chemistry"
            android:layout_margin="4dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnBiology"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/subject_biology"
            android:layout_margin="4dp" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSessions"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/card_margin" />

</LinearLayout>